# nes-emulator

./: .rustfmt.toml  Cargo.toml
src/: app.rs  lib.rs  main.rs  nes.rs
src/nes/: bus.rs  cpu6502.rs
src/nes/cpu6502/: addressing.rs  instruction.rs  lookup_table.rs
