[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nes"
path = "src/main.rs"

[dependencies]
bitflags = "1"
eframe = "0.14"
